# rtic

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml  release.yml
doc/: DOCUMENTATION_STYLE.md
firmware/: .clang-format  CMakeLists.txt
firmware/cmake/: clang.cmake  debug_jlink.cmake  debug_pyocd.cmake  debug_stutil.cmake  flags.cmake
firmware/src/: assert.c  bmi160.cpp  bmi160.h  imu_interface.cpp  main.c  main.cpp  motor_config.h  motor_controller.cpp  motor_controller.h  motor_controls.cpp  motor_controls.h  nrf24_hal.h  pid.cpp  pid.h  rf_interface.h  serial_logger.cpp  serial_logger.h  tb6612.h  threads.h  version.h
firmware/src/board/: analog_in.cpp  analog_in.h  board.c  board.h  digital_in.cpp  digital_in.h  digital_out.cpp  digital_out.h  gpio.cpp  gpio.h  hw_timer.cpp  hw_timer.h  i2c.cpp  i2c.h  io.h  pwm.cpp  pwm.h  quadrature_encoder.cpp  quadrature_encoder.h  spi.cpp  spi.h  timing.cpp  timing.h  uart.cpp  uart.h
firmware/src/controls/: manual_control.cpp  manual_control.h  velocity_control.h
firmware/src/imu/: bmi160.cpp  bmi160.h  imu_interface.cpp  imu_interface.h
firmware/src/logging/: serial_logger.cpp
firmware/src/motors/: motor_controls.cpp  tb6612.cpp
firmware/src/os_cfg/: threads.h
firmware/src/rf/: rf_interface.cpp  rf_interface.h  rf_messages.h
firmware/src/tb6612/: tb6612.cpp  tb6612.h
firmware/src/utils/: low_pass_filter.h  pid.cpp  pid.h  voltage_monitor.cpp  voltage_monitor.h
pcb/kicad/v2/: dj_custom.lib  fp-info-cache  issues.txt  rtic_v2-cache.lib  rtic_v2-rescue.dcm  rtic_v2-rescue.lib  rtic_v2.kicad_pcb  rtic_v2.net  rtic_v2.pro  rtic_v2.sch  rtic_v2.xml  sym-lib-table
pcb/kicad/v2/assembly/: rtic_v2-BOM.csv  rtic_v2-Footprint-Positions.csv
pcb/kicad/v2/dj.pretty/: TB6612FNG_BB.kicad_mod  VR10S3V3.kicad_mod
pcb/kicad/v2/gerber/: rtic_v2-B_Cu.gbl  rtic_v2-B_Mask.gbs  rtic_v2-B_Paste.gbp  rtic_v2-B_SilkS.gbo  rtic_v2-Edge_Cuts.gm1  rtic_v2-F_Cu.gtl  rtic_v2-F_Mask.gts  rtic_v2-F_Paste.gtp  rtic_v2-F_SilkS.gto  rtic_v2-In1_Cu.g2  rtic_v2-In2_Cu.g3  rtic_v2-NPTH-drl_map.gbr  rtic_v2-NPTH.drl  rtic_v2-PTH-drl_map.gbr  rtic_v2-PTH.drl
stm32_cubemx/: rtic_v2_cubemx.ioc
